# fen-to-image

./: README.md  main.py  pyproject.toml
src/fentoimage/: __init__.py  board.py  boardgen.py  config.py  main.py  piece.py
